--- a/src/assets/scss/Stats.scss
+++ b/src/assets/scss/Stats.scss
@@ -1,9 +1,17 @@
 @import "./Variable.scss";
 
 .stats_container {
+    position: relative;
     background-color: $secondary-color;
     padding: 0 8%;
     height: min-content;
+
+    .scruid {
+
+        position: absolute;
+        right: 0;
+        top: 20%;
+    }
 
     .stats_wrapper {
         display: flex;
@@ -11,7 +19,6 @@
         padding: 6.3rem 0;
         justify-content: space-between;
         max-width: 1280px;
-        margin: 6rem auto;
 
         .text {
             color: $color-white;
