--- a/src/assets/scss/Testimonials.scss
+++ b/src/assets/scss/Testimonials.scss
@@ -4,6 +4,12 @@
     padding: 14rem 8% 14rem 8%;
     height: min-content;
     background-color: $color-white;
+    position: relative;
+
+    .wave_svg {
+        position: absolute;
+        right: 10%;
+    }
 
     .testimonials_wrappers {
         margin: auto;
