--- a/src/assets/scss/SectionContent.scss
+++ b/src/assets/scss/SectionContent.scss
@@ -294,6 +294,7 @@
 
             .section_right {
 
+                flex: 1;
 
                 .small_text_top {
                     font-size: 1.6rem;
