--- a/src/assets/scss/FrequentlyAsked.scss
+++ b/src/assets/scss/FrequentlyAsked.scss
@@ -13,6 +13,13 @@
             right: 0;
             width: 9%;
         }
+
+        .rool_svg {
+            position: absolute;
+            left: 0;
+
+
+        }
     }
 
     .faq_wrapper {
