--- a/src/assets/scss/Footer.scss
+++ b/src/assets/scss/Footer.scss
@@ -119,3 +119,125 @@
         color: #181433;
     }
 }
+
+@media screen and (max-width: 480px) {
+    .footer_container {
+        padding: 5rem 8% 0 8%;
+        height: min-content;
+        background-color: $color-white;
+
+        .footer_wrapper {
+            max-width: 1280px;
+            margin: 5rem auto;
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+
+
+            .about {
+                flex: 1;
+
+                .about_content {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 2rem;
+
+                    p {
+                        font-size: 1.6rem;
+                        line-height: 2.8rem;
+                        color: $tertiary-color;
+                        letter-spacing: -0.02em;
+                        padding-top: 1rem;
+                    }
+
+                    .social_img {
+                        display: flex;
+                        gap: 1rem;
+                        align-items: center;
+                    }
+                }
+            }
+
+            .company {
+                flex: 1;
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+
+                ul {
+                    text-decoration: none;
+                    margin: 0;
+                    padding: 0;
+
+                    li {
+                        list-style: none;
+                        font-size: 1.6rem;
+                        line-height: 2.4rem;
+                    }
+                }
+
+            }
+
+            .resources {
+                flex: 1;
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+
+                ul {
+                    text-decoration: none;
+                    margin: 0;
+                    padding: 0;
+
+                    li {
+                        list-style: none;
+                        font-size: 1.6rem;
+                        line-height: 2.4rem;
+                    }
+                }
+            }
+
+            .newsletter {
+                flex: 2;
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+
+                .form {
+                    input {
+                        border: none;
+                        background-color: $color-milk-white;
+                        padding: 1rem 5rem;
+
+                    }
+
+                    button {
+                        background: $secondary-color;
+                        border: none;
+                        color: $color-white;
+                        padding: 1rem 2rem;
+
+                    }
+                }
+
+                p {
+                    color: $color-gray;
+                    color: #aaa9ad;
+                }
+            }
+        }
+
+        .hr {
+            min-width: 5rem;
+            border: 1px solid rgb(229, 226, 226);
+        }
+
+        .copyright {
+            text-align: center;
+            font-size: 1.6rem;
+            line-height: 10rem;
+            letter-spacing: -0.02em;
+            color: #181433;
+        }
+    }
+}
