--- a/src/assets/scss/FrequentlyAsked.scss
+++ b/src/assets/scss/FrequentlyAsked.scss
@@ -65,7 +65,8 @@
                     display: flex;
                     flex-direction: column;
                     align-items: center;
-                    margin: 3rem 0 1rem 0;
+                    margin: 3rem 0 5rem 0;
+                    justify-content: center;
 
                     img {
                         padding: 0 0 3rem 0;
@@ -75,6 +76,7 @@
                         font-size: 2.2rem;
                         line-height: 2.2rem;
                         padding: 0 0 3rem 0;
+                        text-align: center;
                     }
 
                     p {
