--- a/src/assets/scss/Hero.scss
+++ b/src/assets/scss/Hero.scss
@@ -1,388 +1,374 @@
 @import "./Variable.scss";
 
 .hero_container {
+  position: relative;
+  padding: 0 8%;
+  width: 100%;
+  background: linear-gradient(292.12deg, #62bada -35.02%, #c9e7f2 78.96%);
+  overflow: hidden;
+
+  .fill1 {
+    position: absolute;
+    right: 0;
+    width: 4.5%;
+  }
+
+  .fill2 {
+    position: absolute;
+    left: 0;
+    bottom: 2%;
+    width: 5%;
+  }
+
+  .fill3 {
+    margin-bottom: -11%;
+    width: 8%;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+  }
+
+  .container {
+    display: flex;
     position: relative;
-    padding: 0 8%;
-    width: 100%;
-    background: linear-gradient(292.12deg, #62BADA -35.02%, #C9E7F2 78.96%);
-    overflow: hidden;
+    flex-wrap: wrap;
+    height: 90vh;
+    min-height: 69rem;
+    max-height: 72rem;
+    max-width: 1280px;
+    margin: auto;
 
-    .fill1 {
-        position: absolute;
-        right: 0;
-        width: 4.5%;
-    }
+    .hero_title_box {
+      flex: 1.14;
 
-    .fill2 {
-        position: absolute;
-        left: 0;
-        bottom: 2%;
-        width: 5%;
+      h1 {
+        font-size: 6rem;
+        padding-top: 5rem;
+        font-weight: $font-weight-bold;
+        line-height: 80px;
+        letter-spacing: -0.03em;
+      }
 
-    }
+      p {
+        padding: 2rem 0 0 0;
+        font-weight: 500;
+        font-size: 2rem;
+        line-height: 30spx;
+        width: 80%;
+        font-weight: $font-weight-regular;
+        color: $primary-color-lite;
+        letter-spacing: -0.02em;
+      }
 
-    .fill3 {
-        margin-bottom: -11%;
-        width: 8%;
-        position: absolute;
-        bottom: 0;
-        right: 0;
-    }
-
-    .container {
+      .hero_button_box {
         display: flex;
-        position: relative;
-        flex-wrap: wrap;
-        height: 90vh;
-        min-height: 69rem;
-        max-height: 72rem;
-        max-width: 1280px;
-        margin: auto;
+        align-items: center;
+        padding: 5.6rem 0 5.3rem 0;
 
-        .hero_title_box {
-            flex: 1.14;
-
-            h1 {
-                font-size: 6rem;
-                padding-top: 5rem;
-                font-weight: $font-weight-bold;
-                line-height: 80px;
-                letter-spacing: -0.03em;
-            }
-
-            p {
-                padding: 2.0rem 0 0 0;
-                font-weight: 500;
-                font-size: 2rem;
-                line-height: 30spx;
-                width: 80%;
-                font-weight: $font-weight-regular;
-                color: $primary-color-lite;
-                letter-spacing: -0.02em;
-
-            }
-
-            .hero_button_box {
-                display: flex;
-                align-items: center;
-                padding: 5.6rem 0 5.3rem 0;
-
-                button {
-                    margin: 0 5.0rem 0 0;
-                    height: 60px;
-                    width: 142px;
-                    border-radius: 47px;
-                    background-color: $secondary-color;
-                    border: none;
-                    cursor: pointer;
-                    color: $color-white;
-                }
-
-                .wave_box {
-                    position: relative;
-
-                    .play_button {
-                        height: 60px;
-                        width: 60px;
-                        background: #22D497;
-                        border-radius: 47px;
-                        display: flex;
-                        align-items: center;
-                        position: relative;
-                        z-index: 9;
-
-                        .triangle {
-                            width: 20px;
-                            height: 20px;
-                            margin: 0 38%;
-                            background: transparent;
-                            border-top: 15px solid transparent;
-                            border-left: 20px solid $color-white;
-                            border-bottom: 15px solid transparent;
-                            border-right: 15px solid transparent;
-                            border-top-right-radius: 30%
-                        }
-                    }
-
-                    .iq_waves {
-                        position: absolute;
-                        width: 14rem;
-                        height: 14rem;
-                        left: -45px;
-                        top: -45px;
-                        z-index: 2;
-                        float: right;
-
-                        .waves {
-                            position: absolute;
-                            width: 384px;
-                            width: 15rem;
-                            height: 384px;
-                            height: 15rem;
-                            background: rgba(255, 255, 255, 0.2);
-                            opacity: 0;
-                            -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-                            border-radius: 320px;
-                            background-clip: padding-box;
-                            -webkit-animation: waves 3s ease-in-out infinite;
-                            animation: waves 3s ease-in-out infinite;
-
-                        }
-
-                        .wave_1 {
-                            animation-delay: 0s;
-                        }
-
-                        .wave_2 {
-                            animation-delay: 1s;
-                        }
-
-                        .wave_3 {
-                            animation-delay: 2s;
-                        }
-
-                        @-webkit-keyframes waves {
-                            0% {
-                                -webkit-transform: scale(0.2, 0.2);
-                                transform: scale(0.2, 0.2);
-                                opacity: 0;
-                                -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-                            }
-
-                            50% {
-                                opacity: 0.9;
-                                -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
-                            }
-
-                            100% {
-                                -webkit-transform: scale(0.9, 0.9);
-                                transform: scale(0.9, 0.9);
-                                opacity: 0;
-                                -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-                            }
-                        }
-
-                        @keyframes waves {
-                            0% {
-                                -webkit-transform: scale(0.2, 0.2);
-                                transform: scale(0.2, 0.2);
-                                opacity: 0;
-                                -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-                            }
-
-                            50% {
-                                opacity: 0.9;
-                                -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
-                            }
-
-                            100% {
-                                -webkit-transform: scale(0.9, 0.9);
-                                transform: scale(0.9, 0.9);
-                                opacity: 0;
-                                -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-                            }
-                        }
-                    }
-                }
-
-                .play_button_text {
-                    color: $secondary-color;
-                    font-weight: $font-weight-regular;
-                    font-size: 1.7rem;
-                    margin-left: 11px;
-                }
-            }
-
-            .bellow_button_tick {
-                display: flex;
-                gap: 29px;
-                color: $tertiary-color;
-
-                .first_tick_box {
-                    align-items: center;
-                    display: flex;
-                    gap: 6px;
-                }
-
-                .second_tick_box {
-                    align-items: center;
-                    display: flex;
-                    gap: 6px;
-                }
-            }
+        button {
+          margin: 0 5rem 0 0;
+          height: 60px;
+          width: 142px;
+          border-radius: 47px;
+          background-color: $secondary-color;
+          border: none;
+          cursor: pointer;
+          color: $color-white;
         }
 
-        .image_box img {
-            flex: 1;
-            align-self: flex-end;
+        .wave_box {
+          position: relative;
+
+          .play_button {
+            height: 60px;
+            width: 60px;
+            background: #22d497;
+            border-radius: 47px;
+            display: flex;
+            align-items: center;
+            position: relative;
+            z-index: 9;
+
+            .triangle {
+              width: 20px;
+              height: 20px;
+              margin: 0 38%;
+              background: transparent;
+              border-top: 15px solid transparent;
+              border-left: 20px solid $color-white;
+              border-bottom: 15px solid transparent;
+              border-right: 15px solid transparent;
+              border-top-right-radius: 30%;
+            }
+          }
+
+          .iq_waves {
+            position: absolute;
+            width: 14rem;
+            height: 14rem;
+            left: -45px;
+            top: -45px;
+            z-index: 2;
+            float: right;
+
+            .waves {
+              position: absolute;
+              width: 384px;
+              width: 15rem;
+              height: 384px;
+              height: 15rem;
+              background: rgba(255, 255, 255, 0.2);
+              opacity: 0;
+              -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+              border-radius: 320px;
+              background-clip: padding-box;
+              -webkit-animation: waves 3s ease-in-out infinite;
+              animation: waves 3s ease-in-out infinite;
+            }
+
+            .wave_1 {
+              animation-delay: 0s;
+            }
+
+            .wave_2 {
+              animation-delay: 1s;
+            }
+
+            .wave_3 {
+              animation-delay: 2s;
+            }
+
+            @-webkit-keyframes waves {
+              0% {
+                -webkit-transform: scale(0.2, 0.2);
+                transform: scale(0.2, 0.2);
+                opacity: 0;
+                -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+              }
+
+              50% {
+                opacity: 0.9;
+                -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
+              }
+
+              100% {
+                -webkit-transform: scale(0.9, 0.9);
+                transform: scale(0.9, 0.9);
+                opacity: 0;
+                -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+              }
+            }
+
+            @keyframes waves {
+              0% {
+                -webkit-transform: scale(0.2, 0.2);
+                transform: scale(0.2, 0.2);
+                opacity: 0;
+                -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+              }
+
+              50% {
+                opacity: 0.9;
+                -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
+              }
+
+              100% {
+                -webkit-transform: scale(0.9, 0.9);
+                transform: scale(0.9, 0.9);
+                opacity: 0;
+                -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+              }
+            }
+          }
         }
 
+        .play_button_text {
+          color: $secondary-color;
+          font-weight: $font-weight-regular;
+          font-size: 1.7rem;
+          margin-left: 11px;
+        }
+      }
+
+      .bellow_button_tick {
+        display: flex;
+        gap: 29px;
+        color: $tertiary-color;
+
+        .first_tick_box {
+          align-items: center;
+          display: flex;
+          gap: 6px;
+        }
+
+        .second_tick_box {
+          align-items: center;
+          display: flex;
+          gap: 6px;
+        }
+      }
     }
 
+    .image_box img {
+      flex: 1;
+      align-self: flex-end;
+    }
+  }
 }
 
 @media (min-width: 871px) and (max-width: 1024px) {
-    .hero_container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 0 8%;
+  .hero_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 8%;
 
-        .container {
-            min-height: 75rem;
-            // justify-content: center;
-            flex-wrap: nowrap;
+    .container {
+      min-height: 75rem;
+      // justify-content: center;
+      flex-wrap: nowrap;
 
-            .hero_title_box {
-                flex: 1;
+      .hero_title_box {
+        flex: 1;
 
-                h1 {
-                    line-height: 4rem;
-                    line-height: 6rem;
-                    letter-spacing: -0.03em;
-                }
-            }
-
-            .image_box img {
-                justify-content: center;
-                flex: 0 0 50%;
-                margin: auto;
-                height: auto;
-
-            }
-
+        h1 {
+          line-height: 4rem;
+          line-height: 6rem;
+          letter-spacing: -0.03em;
         }
+      }
 
+      .image_box img {
+        justify-content: center;
+        flex: 0 0 50%;
+        margin: auto;
+        height: auto;
+      }
     }
+  }
 }
 
 @media (min-width: 481px) and (max-width: 870px) {
-    .hero_container {
-        padding: 0 8%;
-        height: fit-content;
+  .hero_container {
+    padding: 0 8%;
+    height: fit-content;
 
-        .container {
-            display: flex;
-            min-height: 110rem;
+    .container {
+      display: flex;
+      min-height: 110rem;
 
-            .hero_title_box {
-                flex: 1;
+      .hero_title_box {
+        flex: 1;
 
-                h1 {
-                    font-size: 4rem;
-                    padding-top: 5rem;
-                    line-height: 40px;
-                }
-
-                .bellow_button_tick {
-
-                    .first_tick_box {
-                        .text {
-                            font-size: 1.4rem;
-                        }
-                    }
-
-                    .second_tick_box {
-                        .text {
-                            font-size: 1.4rem;
-                        }
-                    }
-                }
-
-                .hero_button_box {
-                    display: flex;
-                    align-items: center;
-                    padding: 5.6rem 0 5.3rem 0;
-
-                    button {
-                        margin: 0 5.0rem 0 0;
-                        height: 60px;
-                        width: 142px;
-                        border-radius: 47px;
-                        background-color: $secondary-color;
-                        border: none;
-                        cursor: pointer;
-                        color: $color-white;
-                    }
-
-                    .play_button_text {
-                        display: none;
-                    }
-                }
-
-            }
-
-            .image_box img {
-                justify-content: center;
-                flex: 1;
-                margin: auto;
-                height: auto;
-
-            }
+        h1 {
+          font-size: 4rem;
+          padding-top: 5rem;
+          line-height: 40px;
         }
+
+        .bellow_button_tick {
+          .first_tick_box {
+            .text {
+              font-size: 1.4rem;
+            }
+          }
+
+          .second_tick_box {
+            .text {
+              font-size: 1.4rem;
+            }
+          }
+        }
+
+        .hero_button_box {
+          display: flex;
+          align-items: center;
+          padding: 5.6rem 0 5.3rem 0;
+
+          button {
+            margin: 0 5rem 0 0;
+            height: 60px;
+            width: 142px;
+            border-radius: 47px;
+            background-color: $secondary-color;
+            border: none;
+            cursor: pointer;
+            color: $color-white;
+          }
+
+          .play_button_text {
+            display: none;
+          }
+        }
+      }
+
+      .image_box img {
+        justify-content: center;
+        flex: 1;
+        margin: auto;
+        height: auto;
+      }
     }
+  }
 }
 
 @media screen and (max-width: 480px) {
-    .hero_container {
-        padding: 0 1rem;
+  .hero_container {
+    padding: 0 1rem;
 
-        .container {
-            min-height: 110rem;
+    .container {
+      min-height: 110rem;
 
-            .hero_title_box {
-                flex: 1;
+      .hero_title_box {
+        flex: 1;
 
-                h1 {
-                    font-size: 4rem;
-                    text-align: center;
-                    padding-top: 5rem;
-                    line-height: 40px;
-                }
-
-                p {
-                    text-align: center;
-                    width: 100%;
-                }
-
-                .bellow_button_tick {
-                    justify-content: space-around;
-
-                    .first_tick_box {
-                        .text {
-                            font-size: 1.4rem;
-                        }
-                    }
-
-                    .second_tick_box {
-                        .text {
-                            font-size: 1.4rem;
-                        }
-                    }
-                }
-
-                .hero_button_box {
-                    display: flex;
-                    justify-content: space-around;
-                    align-items: center;
-
-                    button {
-                        margin: 0 5.0rem 0 0;
-
-                    }
-
-                    .play_button_text {
-                        display: none;
-                    }
-                }
-
-            }
-
-            .image_box img {
-                justify-content: center;
-                align-items: center;
-
-            }
+        h1 {
+          font-size: 4rem;
+          text-align: center;
+          padding-top: 5rem;
+          line-height: 40px;
         }
+
+        p {
+          text-align: center;
+          width: 100%;
+        }
+
+        .bellow_button_tick {
+          justify-content: space-around;
+
+          .first_tick_box {
+            .text {
+              font-size: 1.4rem;
+            }
+          }
+
+          .second_tick_box {
+            .text {
+              font-size: 1.4rem;
+            }
+          }
+        }
+
+        .hero_button_box {
+          display: flex;
+          justify-content: space-around;
+          align-items: center;
+
+          button {
+            margin: 0 5rem 0 0;
+          }
+
+          .play_button_text {
+            display: none;
+          }
+        }
+      }
+
+      .image_box img {
+        justify-content: center;
+        align-items: center;
+      }
     }
+  }
 }
