--- a/src/assets/scss/SectionContent.scss
+++ b/src/assets/scss/SectionContent.scss
@@ -1,376 +1,354 @@
 @import "./Variable.scss";
 
 .section_container {
-    padding: 0 8%;
-    height: min-content;
+  padding: 0 8%;
+  height: min-content;
 
-    .section_wrapper {
+  .section_wrapper {
+    display: flex;
+    align-items: flex-end;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    max-width: 1280px;
+    margin: 15rem auto;
+    gap: 7rem;
+
+    .section_left {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      position: relative;
+      height: min-content;
+      flex: 1;
+      background-color: $color-highlight;
+      border-radius: 2rem;
+      padding: 4rem;
+
+      .green {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        border-radius: 0 0 0 2rem;
+      }
+
+      .orange {
+        position: absolute;
+        top: 0;
+        left: 0;
+        border-radius: 2rem 0 0 0;
+      }
+
+      .blue {
+        position: absolute;
+        right: 0;
+        top: 35%;
+      }
+
+      .ovel {
+        position: absolute;
+        right: -3rem;
+        top: -2rem;
+      }
+
+      .profit {
         display: flex;
-        align-items: flex-end;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        max-width: 1280px;
-        margin: 15rem auto;
-        gap: 7rem;
+        padding: 1.6rem;
+        align-items: center;
+        border-radius: 10px;
+        background: $color-white;
+        gap: 1.5rem;
+        box-shadow: 0px 100px 80px rgba(0, 0, 0, 0.03),
+          0px 64.8148px 46.8519px rgba(0, 0, 0, 0.0227778),
+          0px 38.5185px 25.4815px rgba(0, 0, 0, 0.0182222),
+          0px 20px 13px rgba(0, 0, 0, 0.015),
+          0px 8.14815px 6.51852px rgba(0, 0, 0, 0.0117778),
+          0px 1.85185px 3.14815px rgba(0, 0, 0, 0.00722222);
+        z-index: 2;
+        animation-name: floating;
+        animation-duration: 3s;
+        animation-iteration-count: infinite;
+        animation-timing-function: ease-in-out;
 
-        .section_left {
-            position: relative;
-            display: flex;
-            flex-direction: column;
-            position: relative;
-            height: min-content;
-            flex: 1;
-            background-color: $color-highlight;
-            border-radius: 2rem;
-            padding: 4rem;
+        @keyframes floating {
+          from {
+            transform: translate(0, 0px);
+          }
 
-            .green {
-                position: absolute;
-                bottom: 0;
-                left: 0;
-                border-radius: 0 0 0 2rem;
-            }
+          65% {
+            transform: translate(0, 15px);
+          }
 
-            .orange {
-                position: absolute;
-                top: 0;
-                left: 0;
-                border-radius: 2rem 0 0 0;
-            }
-
-            .blue {
-                position: absolute;
-                right: 0;
-                top: 35%;
-            }
-
-            .ovel {
-                position: absolute;
-                right: -3rem;
-                top: -2rem;
-            }
-
-            .profit {
-                display: flex;
-                padding: 1.6rem;
-                align-items: center;
-                border-radius: 10px;
-                background: $color-white;
-                gap: 1.5rem;
-                box-shadow: 0px 100px 80px rgba(0, 0, 0, 0.03), 0px 64.8148px 46.8519px rgba(0, 0, 0, 0.0227778), 0px 38.5185px 25.4815px rgba(0, 0, 0, 0.0182222), 0px 20px 13px rgba(0, 0, 0, 0.015), 0px 8.14815px 6.51852px rgba(0, 0, 0, 0.0117778), 0px 1.85185px 3.14815px rgba(0, 0, 0, 0.00722222);
-                z-index: 2;
-                animation-name: floating;
-                animation-duration: 3s;
-                animation-iteration-count: infinite;
-                animation-timing-function: ease-in-out;
-
-                @keyframes floating {
-                    from {
-                        transform: translate(0, 0px);
-                    }
-
-                    65% {
-                        transform: translate(0, 15px);
-                    }
-
-                    to {
-                        transform: translate(0, -0px);
-                    }
-                }
-
-                .person_img {}
-
-                .person_content {
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-                    margin-bottom: -1.5rem;
-
-                    .profit_amount {
-                        font-size: 1.5rem;
-                        color: $secondary-color;
-                        line-height: 1.4rem;
-                        letter-spacing: -0.02em;
-                        font-weight: $font-weight-semi-bold;
-                        width: max-content;
-                        background: $color-white-blue;
-                        padding: 0.6rem;
-                        border-radius: 3rem;
-                    }
-
-                    .message {
-                        font-size: 1.4rem;
-                        line-height: 3rem;
-                        color: $tertiary-color;
-                    }
-                }
-            }
-
-            .profit1 {
-                animation-delay: 1s;
-                margin: 1.4rem -3rem 1.4rem 3rem;
-            }
-
-            .profit2 {
-                animation-delay: 2s;
-                margin: 1.4rem -10rem 1.4rem 10rem;
-
-            }
-
-            .profit3 {
-                animation-delay: 3s;
-                margin: 1.4rem -7rem 1.4rem 7rem;
-            }
-
-            .profit4 {
-                animation-delay: 4s;
-                margin: 1.4rem -2rem 1.4rem 2rem;
-
-            }
-
-            .card_on_hand {
-
-                width: 50%;
-
-            }
-
+          to {
+            transform: translate(0, -0px);
+          }
         }
 
-        .section_right {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-
-            .small_text_top {
-                font-size: 1.6rem;
-                line-height: 1.9rem;
-                font-weight: $font-weight-semi-bold;
-                color: $secondary-color;
-                margin-bottom: 1.3rem;
-            }
-
-            .right_title {
-                h2 {
-                    font-size: 5rem;
-                    line-height: 6rem;
-                    font-weight: $font-weight-bold;
-                    margin-bottom: 2.9rem;
-                }
-            }
-
-            .right_paragraph {
-                p {
-                    font-weight: $font-weight-regular;
-                    font-size: 1.8rem;
-                    line-height: 3rem;
-                    letter-spacing: -0.02em;
-                    color: $primary-color-lite;
-                    margin-bottom: 2.3rem;
-                }
-            }
-
-            .quote_box {
-                margin-top: 2.5rem;
-            }
-
-            .hr {
-                height: 3vh;
-                border-top: 2px solid #c4c4c4;
-            }
-
-            .list_box {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                font-size: 1.9rem;
-                line-height: 3rem;
-                letter-spacing: -0.02em;
-                font-weight: $font-weight-regular;
-                color: $primary-color-lite;
-
-                .list {
-                    display: flex;
-                    align-items: center;
-                    gap: 1rem;
-
-                    img {
-                        height: min-content;
-                    }
-
-                    li {
-                        list-style: none;
-                    }
-                }
-
-            }
+        .person_img {
         }
 
-        .section_left_2 {
-            flex: 1;
-            background-color: $color-highlight;
-            border-radius: 2rem;
+        .person_content {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          margin-bottom: -1.5rem;
 
-            .chart {
-                position: relative;
+          .profit_amount {
+            font-size: 1.5rem;
+            color: $secondary-color;
+            line-height: 1.4rem;
+            letter-spacing: -0.02em;
+            font-weight: $font-weight-semi-bold;
+            width: max-content;
+            background: $color-white-blue;
+            padding: 0.6rem;
+            border-radius: 3rem;
+          }
 
-                img {
-                    position: absolute;
-                    width: 50%;
-                    left: -5rem;
-                    top: 14rem;
-                }
-            }
-
-            .card_on_hand {
-                margin-top: -15rem;
-                width: 60%;
-            }
+          .message {
+            font-size: 1.4rem;
+            line-height: 3rem;
+            color: $tertiary-color;
+          }
         }
+      }
+
+      .profit1 {
+        animation-delay: 1s;
+        margin: 1.4rem -3rem 1.4rem 3rem;
+      }
+
+      .profit2 {
+        animation-delay: 2s;
+        margin: 1.4rem -10rem 1.4rem 10rem;
+      }
+
+      .profit3 {
+        animation-delay: 3s;
+        margin: 1.4rem -7rem 1.4rem 7rem;
+      }
+
+      .profit4 {
+        animation-delay: 4s;
+        margin: 1.4rem -2rem 1.4rem 2rem;
+      }
+
+      .card_on_hand {
+        width: 50%;
+      }
     }
 
+    .section_right {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+
+      .small_text_top {
+        font-size: 1.6rem;
+        line-height: 1.9rem;
+        font-weight: $font-weight-semi-bold;
+        color: $secondary-color;
+        margin-bottom: 1.3rem;
+      }
+
+      .right_title {
+        h2 {
+          font-size: 5rem;
+          line-height: 6rem;
+          font-weight: $font-weight-bold;
+          margin-bottom: 2.9rem;
+        }
+      }
+
+      .right_paragraph {
+        p {
+          font-weight: $font-weight-regular;
+          font-size: 1.8rem;
+          line-height: 3rem;
+          letter-spacing: -0.02em;
+          color: $primary-color-lite;
+          margin-bottom: 2.3rem;
+        }
+      }
+
+      .quote_box {
+        margin-top: 2.5rem;
+      }
+
+      .hr {
+        height: 3vh;
+        border-top: 2px solid #c4c4c4;
+      }
+
+      .list_box {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        font-size: 1.9rem;
+        line-height: 3rem;
+        letter-spacing: -0.02em;
+        font-weight: $font-weight-regular;
+        color: $primary-color-lite;
+
+        .list {
+          display: flex;
+          align-items: center;
+          gap: 1rem;
+
+          img {
+            height: min-content;
+          }
+
+          li {
+            list-style: none;
+          }
+        }
+      }
+    }
+
+    .section_left_2 {
+      flex: 1;
+      background-color: $color-highlight;
+      border-radius: 2rem;
+
+      .chart {
+        position: relative;
+
+        img {
+          position: absolute;
+          width: 50%;
+          left: -5rem;
+          top: 14rem;
+        }
+      }
+
+      .card_on_hand {
+        margin-top: -15rem;
+        width: 60%;
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 480px) {
-    .section_container {
+  .section_container {
+    .section_wrapper {
+      .section_left {
+        .profit {
+          padding: 1.6rem;
 
+          .person_img {
+          }
 
-        .section_wrapper {
+          .person_content {
+            margin-bottom: -0.7rem;
 
-
-            .section_left {
-
-                .profit {
-
-                    padding: 1.6rem;
-
-                    .person_img {}
-
-                    .person_content {
-                        margin-bottom: -0.7rem;
-
-                        .profit_amount {
-                            font-size: 1.5rem;
-
-                        }
-
-                        .message {
-
-                            line-height: 2rem;
-
-                        }
-                    }
-                }
-
-                .profit1 {
-                    animation-delay: 1s;
-                    margin: 1.4rem -0.5rem 1.4rem 0.5rem;
-                }
-
-                .profit2 {
-                    animation-delay: 2s;
-                    margin: 1.4rem -2rem 1.4rem 2rem;
-
-                }
-
-                .profit3 {
-                    animation-delay: 3s;
-                    margin: 1.4rem 1rem 1.4rem -1rem;
-                }
-
-                .profit4 {
-                    animation-delay: 4s;
-                    margin: 1.4rem -1rem 1.4rem 1rem;
-
-                }
-
-                .card_on_hand {
-
-                    width: 50%;
-
-                }
-
+            .profit_amount {
+              font-size: 1.5rem;
             }
 
-            .section_right {
-
-                flex: 1;
-
-                .small_text_top {
-                    font-size: 1.6rem;
-
-                }
-
-                .right_title {
-                    h2 {
-                        font-size: 4rem;
-                        line-height: 5rem;
-                    }
-                }
-
-                .right_paragraph {
-                    p {
-                        font-weight: $font-weight-regular;
-                        font-size: 1.8rem;
-                        line-height: 3rem;
-                        letter-spacing: -0.02em;
-                        color: $primary-color-lite;
-                        margin-bottom: 2.3rem;
-                    }
-                }
-
-                .quote_box {
-                    margin-top: 2.5rem;
-                }
-
-                .hr {
-                    height: 3vh;
-                    border-top: 2px solid #c4c4c4;
-                }
-
-                .list_box {
-
-                    font-size: 1.8rem;
-                    line-height: 3rem;
-
-
-                    .list {
-
-                        gap: 1rem;
-
-                        img {
-                            height: min-content;
-                        }
-
-                        li {
-                            list-style: none;
-                        }
-                    }
-
-                }
+            .message {
+              line-height: 2rem;
             }
-
-            .section_left_2 {
-                flex: 1;
-
-
-                .chart {
-                    position: relative;
-
-                    img {
-                        position: absolute;
-                        width: 50%;
-                        top: 8rem;
-                        left: 25%;
-                    }
-                }
-
-                .card_on_hand {
-                    margin-top: -15rem;
-                    width: 60%;
-                }
-            }
+          }
         }
 
+        .profit1 {
+          animation-delay: 1s;
+          margin: 1.4rem -0.5rem 1.4rem 0.5rem;
+        }
+
+        .profit2 {
+          animation-delay: 2s;
+          margin: 1.4rem -2rem 1.4rem 2rem;
+        }
+
+        .profit3 {
+          animation-delay: 3s;
+          margin: 1.4rem 1rem 1.4rem -1rem;
+        }
+
+        .profit4 {
+          animation-delay: 4s;
+          margin: 1.4rem -1rem 1.4rem 1rem;
+        }
+
+        .card_on_hand {
+          width: 50%;
+        }
+      }
+
+      .section_right {
+        flex: 1;
+
+        .small_text_top {
+          font-size: 1.6rem;
+        }
+
+        .right_title {
+          h2 {
+            font-size: 4rem;
+            line-height: 5rem;
+          }
+        }
+
+        .right_paragraph {
+          p {
+            font-weight: $font-weight-regular;
+            font-size: 1.8rem;
+            line-height: 3rem;
+            letter-spacing: -0.02em;
+            color: $primary-color-lite;
+            margin-bottom: 2.3rem;
+          }
+        }
+
+        .quote_box {
+          margin-top: 2.5rem;
+        }
+
+        .hr {
+          height: 3vh;
+          border-top: 2px solid #c4c4c4;
+        }
+
+        .list_box {
+          font-size: 1.8rem;
+          line-height: 3rem;
+
+          .list {
+            gap: 1rem;
+
+            img {
+              height: min-content;
+            }
+
+            li {
+              list-style: none;
+            }
+          }
+        }
+      }
+
+      .section_left_2 {
+        flex: 1;
+
+        .chart {
+          position: relative;
+
+          img {
+            position: absolute;
+            width: 50%;
+            top: 8rem;
+            left: 25%;
+          }
+        }
+
+        .card_on_hand {
+          margin-top: -15rem;
+          width: 60%;
+        }
+      }
     }
+  }
 }
