--- a/src/assets/scss/SectionHeading.scss
+++ b/src/assets/scss/SectionHeading.scss
@@ -1,89 +1,91 @@
 @import "./Variable.scss";
 
 .section_heading_container {
-    padding: 0 8%;
-    height: min-content;
+  padding: 0 8%;
+  height: min-content;
 
-    .section_heading_wrapper {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        max-width: 1280px;
-        margin: 6rem auto;
+  .section_heading_wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    max-width: 1280px;
+    margin: 6rem auto;
 
-        .section_heading_content {
-            margin-right: 20rem;
-            flex: 2;
+    .section_heading_content {
+      margin-right: 20rem;
+      flex: 2;
 
-            h2 {
-                font-size: 5.6rem;
-                line-height: 6.6rem;
-                letter-spacing: -0.03em;
-                font-weight: $font-weight-bold;
-            }
+      h2 {
+        font-size: 5.6rem;
+        line-height: 6.6rem;
+        letter-spacing: -0.03em;
+        font-weight: $font-weight-bold;
+      }
 
-            p {
-                font-size: 1.6rem;
-                line-height: 2.9rem;
-                letter-spacing: -0.02em;
-            }
-        }
-
-
+      p {
+        font-size: 1.6rem;
+        line-height: 2.9rem;
+        letter-spacing: -0.02em;
+      }
     }
+  }
 }
 
 @media (min-width: 871px) and (max-width: 1024px) {
-    .section_heading_container {
-        .section_heading_wrapper {
-            .section_heading_content {
-                margin-right: 0;
+  .section_heading_container {
+    .section_heading_wrapper {
+      .section_heading_content {
+        margin-right: 0;
 
-                h2 {
-                    font-size: 4.6rem;
-                    line-height: 5.6rem;
-                }
-
-                p {}
-            }
-
-            .section_heading_quote {
-                img {}
-
-                .quote {}
-
-                .author {}
-            }
+        h2 {
+          font-size: 4.6rem;
+          line-height: 5.6rem;
         }
+
+        p {
+        }
+      }
+
+      .section_heading_quote {
+        img {
+        }
+
+        .quote {
+        }
+
+        .author {
+        }
+      }
     }
+  }
 }
 
 @media screen and (max-width: 870px) {
-    .section_heading_container {
-        .section_heading_wrapper {
-            gap: 5rem;
+  .section_heading_container {
+    .section_heading_wrapper {
+      gap: 5rem;
 
-            .section_heading_content {
-                margin: auto;
-                flex: none;
-                width: 100%;
+      .section_heading_content {
+        margin: auto;
+        flex: none;
+        width: 100%;
 
-                h2 {
-                    font-size: 4rem;
-                    line-height: 5rem;
-                }
-
-                //kept for future changes
-                // p {}
-            }
-
-            // .section_heading_quote {
-            //     img {}
-
-            //     .quote {}
-
-            //     .author {}
-            // }
+        h2 {
+          font-size: 4rem;
+          line-height: 5rem;
         }
+
+        //kept for future changes
+        // p {}
+      }
+
+      // .section_heading_quote {
+      //     img {}
+
+      //     .quote {}
+
+      //     .author {}
+      // }
     }
+  }
 }
