--- a/src/assets/scss/Stats.scss
+++ b/src/assets/scss/Stats.scss
@@ -1,91 +1,91 @@
 @import "./Variable.scss";
 
 .stats_container {
-    position: relative;
-    background-color: $secondary-color;
-    padding: 0 8%;
-    height: min-content;
+  position: relative;
+  background-color: $secondary-color;
+  padding: 0 8%;
+  height: min-content;
 
-    .scruid {
+  .scruid {
+    position: absolute;
+    right: 0;
+    top: 20%;
+  }
 
-        position: absolute;
-        right: 0;
-        top: 20%;
-    }
+  .stats_wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 6.3rem 0;
+    justify-content: space-between;
+    max-width: 1280px;
 
-    .stats_wrapper {
+    .text {
+      color: $color-white;
+
+      .stars_text {
+        font-size: 1.9rem;
+        line-height: 4.1rem;
+        letter-spacing: -0.02em;
+        max-width: 13ch;
+        font-weight: $font-weight-semi-light;
+      }
+
+      .datas {
         display: flex;
-        flex-wrap: wrap;
-        padding: 6.3rem 0;
-        justify-content: space-between;
-        max-width: 1280px;
+        flex-direction: column;
+        justify-content: center;
 
-        .text {
-            color: $color-white;
-
-            .stars_text {
-                font-size: 1.9rem;
-                line-height: 4.1rem;
-                letter-spacing: -0.02em;
-                max-width: 13ch;
-                font-weight: $font-weight-semi-light;
-            }
-
-            .datas {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-
-                .data {
-                    font-size: 7.2rem;
-                    line-height: 7.2rem;
-                    font-weight: $font-weight-bold;
-                    letter-spacing: -0.02em;
-                }
-
-                .text {
-                    font-size: 2rem;
-                    padding: 2rem 0;
-                }
-            }
+        .data {
+          font-size: 7.2rem;
+          line-height: 7.2rem;
+          font-weight: $font-weight-bold;
+          letter-spacing: -0.02em;
         }
+
+        .subdata {
+          display: flex;
+          align-items: center;
+
+          .text {
+            font-size: 2rem;
+            padding: 2rem 0;
+            margin-left: 1rem;
+          }
+        }
+      }
     }
+  }
 }
 
 @media screen and (max-width: 480px) {
-    .stats_container {
+  .stats_container {
+    .stats_wrapper {
+      display: flex;
+      flex-direction: column;
+      text-align: center;
 
+      .text {
+        width: 100%;
 
-        .stats_wrapper {
-            display: flex;
-            flex-direction: column;
-            text-align: center;
-
-            .text {
-                width: 100%;
-
-                .stars_text {
-                    max-width: fit-content;
-                    line-height: 3rem;
-
-                }
-
-                .datas {
-
-                    padding: 1rem 0;
-
-                    .data {
-                        font-size: 5rem;
-                        line-height: 5.2rem;
-
-                    }
-
-                    .text {
-                        font-size: 2rem;
-                        padding: 1rem 0;
-                    }
-                }
-            }
+        .stars_text {
+          max-width: fit-content;
+          line-height: 3rem;
         }
+
+        .datas {
+          padding: 1rem 0;
+
+          .data {
+            font-size: 5rem;
+            line-height: 5.2rem;
+          }
+
+          .text {
+            font-size: 2rem;
+            padding: 1rem 0;
+          }
+        }
+      }
     }
+  }
 }
