--- a/src/assets/scss/Variable.scss
+++ b/src/assets/scss/Variable.scss
@@ -1,27 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700;800&display=swap");
 
 /* Variables */
 $primary-color: #000000;
-$primary-color-lite: #64607D;
-$secondary-color: #3734A9;
+$primary-color-lite: #64607d;
+$secondary-color: #3734a9;
 $tertiary-color: #757095;
 $color-white-blue: rgb(235 235 246);
-$color-orange: #FF7F5C;
+$color-orange: #ff7f5c;
 
 $color-white: #ffffff;
-$color-milk-white: #F5F6F8;
-$color-background-main: #FAFBFF;
-$color-highlight: #DFF6FF;
-$color-highlight-second: #C9E7F2;
+$color-milk-white: #f5f6f8;
+$color-background-main: #fafbff;
+$color-highlight: #dff6ff;
+$color-highlight-second: #c9e7f2;
 
 $color-gray: #c4c4c47d;
-;
-
-
-$header-button-color: #4F46BA;
+$header-button-color: #4f46ba;
 
 /* TYPOGRAPHY */
-$primary-font-family: 'Manrope', sans-serif;
+$primary-font-family: "Manrope", sans-serif;
 $default-font-size: 1.6rem;
 
 /* FONT */
